randomly playing and messing around

--- a/Week_01/01_ukoly.ipynb
+++ b/Week_01/01_ukoly.ipynb
@@ -106,10 +106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Franta Lopata\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Franta Lopata\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Franta Lopata\n"
+     ]
+    }
+   ],
+   "source": [
+    "franta = \"Franta Lopata\"\n",
+    "print(franta)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "ten = 10\n",
+    "print(ten)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "two = 2\n",
+    "three = 3\n",
+    "sum = 2 + 3\n",
+    "print(sum)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,10 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "twohalf = 2.5\n",
+    "def x_times_2(x):\n",
+    "    return x * 2\n",
+    "\n",
+    "print(x_times_2(twohalf))\n"
+   ]
   }
  ],
  "metadata": {
@@ -187,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
