--- a/Week_03/03_ukoly.ipynb
+++ b/Week_03/03_ukoly.ipynb
@@ -180,10 +180,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key: a, value:1\n",
+      "key: b, value:2\n",
+      "key: c, value:3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'a': 1, 'b': 2, 'c': 3}\n",
+    "\n",
+    "def x():\n",
+    "    result = \"\"\n",
+    "    for i in d.items():\n",
+    "        # print(i[0], \" = \", i[1])\n",
+    "        result += (\"key: \" + i[0] + \", value:\" + str(i[1]) + \"\\n\")\n",
+    "    return result\n",
+    "\n",
+    "test = x()\n",
+    "print(test)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -504,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
