--- a/Week_05/05_ukoly.ipynb
+++ b/Week_05/05_ukoly.ipynb
@@ -13,10 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 4]\n",
+      "12\n",
+      "24\n",
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1, 2, 3], dtype=np.int32)\n",
+    "b = np.array([1, 2, 3], dtype=np.float64)\n",
+    "c = np.array([1, 2, 3], dtype=np.complex128)\n",
+    "\n",
+    "a32 = map(lambda x: x.nbytes, a)\n",
+    "print(list(a32))\n",
+    "\n",
+    "i32s_size = a.nbytes\n",
+    "print(i32s_size)\n",
+    "f64s_size = b.nbytes\n",
+    "print(f64s_size)\n",
+    "c128_size = c.nbytes\n",
+    "print(c128_size)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,7 +391,7 @@
     "%%writefile test_data.csv\n",
     "1, 2, 3, 4, 5\n",
     "6, , , 7, 8\n",
-    " , , 9,10,11"
+    " , , 9,10,11\n"
    ]
   },
   {
@@ -419,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
