minor fix 02a_promenne_a_typy.ipynb

--- a/Week_02/02a_promenne_a_typy.ipynb
+++ b/Week_02/02a_promenne_a_typy.ipynb
@@ -245,7 +245,7 @@
     "muj_tuple = (5, 1.2, \"písmenko\")\n",
     "print(type(muj_tuple))\n",
     "print(muj_tuple)\n",
-    "print(muj_tuple[1])\n",
+    "print(muj_tuple[1]) # = 1.2\n",
     "print(len(muj_tuple))"
    ]
   },
@@ -255,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# muj_tuple[1] = 2"
+    "# muj_tuple[1] = 1.2"
    ]
   },
   {
