went through various study notebooks

--- a/Week_02/02a_promenne_a_typy.ipynb
+++ b/Week_02/02a_promenne_a_typy.ipynb
@@ -27,9 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4636476090008061\n",
+      "0.4636476090008061\n",
+      "0.4636476090008061\n",
+      "0.4636476090008061\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy\n",
     "from numpy import arctan\n",
@@ -238,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "(5, 1.2, 'písmenko')\n",
+      "1.2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "muj_tuple = (5, 1.2, \"písmenko\")\n",
     "print(type(muj_tuple))\n",
@@ -465,11 +487,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n",
+      "[1, 22, 3, 22, 5, 22, 7, 22, 9, 22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "muj_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "p = print\n",
+    "prirazeni = muj_list[::2]\n",
+    "p(prirazeni)\n",
+    "muj_list[1::2] = [22,22,22,22,22]\n",
+    "p(muj_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 6 2]\n",
+      " [1 7 8]\n",
+      " [8 5 9]]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "<class 'int'>\n",
+      "1\n",
+      "[[8 6 2]\n",
+      " [1 1 8]\n",
+      " [8 5 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as npy\n",
+    "\n",
+    "M = np.random.randint(0,10, (3,3))\n",
+    "p(M)\n",
+    "rada = list(range(1,10))\n",
+    "p(rada)\n",
+    "\n",
+    "origin_row, origin_col = int(M.shape[0] / 2), int(M.shape[1] / 2)\n",
+    "\n",
+    "\n",
+    "M1 = M\n",
+    "M1[origin_row,origin_col] = rada[0]\n",
+    "p(M1)\n",
+    "x, y = origin_row, origin_col + 1 \n",
+    "M1[x, y] = rada[1]\n",
+    "print(M1)\n",
+    "\n",
+    "if (M1[x, y] == 0):\n",
+    "    x, y = x += 1, y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "muj_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
     "print(muj_list[::])\n",
     "print(muj_list[2::])\n",
@@ -492,9 +579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[6, 7, 8, 9, 10]\n",
+      "[]\n",
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[9, 8, 7, 6, 5, 4, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "print(muj_list[:-3:])\n",
     "print(muj_list[-5::])\n",
@@ -514,9 +613,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "{0, 'a', 5.1}\n",
+      "{0, 1.2, 'a', 5.1}\n",
+      "{1.2, 'a', 5.1}\n",
+      "{0, 1, 5.1, 'a', 'b'}\n",
+      "{'a', 5.1}\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "muj_set = {\"a\", 0 , 5.1}\n",
     "print(type(muj_set))\n",
@@ -605,9 +718,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "<class 'int'>\n",
+      "5.0\n",
+      "<class 'float'>\n",
+      "5\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "# příklady přetypování\n",
     "x = 5\n",
@@ -652,21 +778,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.2"
   },
   "orig_nbformat": 4,
   "vscode": {
