--- a/Week_02/02b_operatory.ipynb
+++ b/Week_02/02b_operatory.ipynb
@@ -92,14 +92,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n",
+      "6\n",
+      "21\n",
+      "1\n",
+      "8\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print(2 + 3)\n",
     "print(3 - 2)\n",
     "print(2 * 3)\n",
-    "print(6 / 3)\n",
+    "f = 43 / 2\n",
+    "print(int(f))\n",
     "print(7 % 3)\n",
     "print(2 ** 3)\n",
     "print(7 // 3)"
@@ -421,9 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "y = 4\n",
@@ -434,7 +457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
