--- a/Week_02/02c_funkce_a_rizeni_toku.ipynb
+++ b/Week_02/02c_funkce_a_rizeni_toku.ipynb
@@ -87,9 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n",
+      "140154115583456\n",
+      "7\n",
+      "<class 'function'>\n",
+      "140154115583456\n"
+     ]
+    }
+   ],
    "source": [
     "def secti(a, b):\n",
     "    return a + b\n",
@@ -104,9 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 -1\n",
+      "(7, -1)\n"
+     ]
+    }
+   ],
    "source": [
     "# funkce vracející více proměnných\n",
     "def secti_odecti(a, b):\n",
@@ -121,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# funkce s defaultní hodnotou parametru\n",
     "def secti(a, b=1):\n",
@@ -131,7 +160,7 @@
     "\n",
     "a = 3\n",
     "b = 4\n",
-    "c = secti(a, b)\n",
+    "c = secti(a)\n",
     "print(c)\n",
     "\n"
    ]
@@ -147,9 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vstoupil jsem do funkce s parametrem n =  5\n",
+      "Vstoupil jsem do funkce s parametrem n =  4\n",
+      "Vstoupil jsem do funkce s parametrem n =  3\n",
+      "Vstoupil jsem do funkce s parametrem n =  2\n",
+      "Vstoupil jsem do funkce s parametrem n =  1\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "# funkce počítající sumu čísel 1 až n\n",
     "def suma_n(n):\n",
@@ -179,9 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka if else syntaxe\n",
     "x = 3\n",
@@ -203,9 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka s elif\n",
     "x = 3\n",
@@ -234,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka s komplexní podmínkou\n",
     "x = 3\n",
@@ -257,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka kde podmínku zajistí funkce\n",
     "x = 3\n",
@@ -301,9 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka for cyklu\n",
     "můj_list = [1, 2, 3, 4, 5]\n",
@@ -313,9 +399,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "cyklus dokončen\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka for cyklu s else\n",
     "for item in range(5):\n",
@@ -326,9 +425,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka for cyklu s break\n",
     "for item in range(5):\n",
@@ -339,9 +448,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "potom continue\n",
+      "1\n",
+      "potom continue\n",
+      "2\n",
+      "3\n",
+      "potom continue\n",
+      "4\n",
+      "potom continue\n"
+     ]
+    }
+   ],
    "source": [
     "# ukázka for cyklu s continue\n",
     "for item in range(5):\n",
@@ -353,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
