--- a/Week_05/05_ukoly.ipynb
+++ b/Week_05/05_ukoly.ipynb
@@ -13,24 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
       "12\n",
-      "24\n",
       "48\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([1, 2, 3], dtype=np.int32)\n",
+    "a = np.array([1, 2, 3], dtype=np.int8)\n",
     "print(a.nbytes)\n",
-    "a = np.array([1, 2, 3], dtype=np.float64)\n",
+    "a = np.array([1, 2, 3], dtype=np.float32)\n",
     "print(a.nbytes)\n",
     "a = np.array([1, 2, 3], dtype=np.complex128)\n",
     "print(a.nbytes)"
@@ -932,7 +932,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -946,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
