--- a/Week_05/05c_numpy_prace_se_soubory.ipynb
+++ b/Week_05/05c_numpy_prace_se_soubory.ipynb
@@ -12,7 +12,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
@@ -43,13 +43,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Writing ascii_data_1.txt\n"
+                    ]
+                }
+            ],
             "source": [
                 "%%file ascii_data_1.txt\n",
                 "1 -6.1 -6.1 -6.1 1\n",
@@ -73,13 +81,30 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[  1.   -6.1  -6.1  -6.1   1. ]\n",
+                        " [  2.  -15.4 -15.4 -15.4   1. ]\n",
+                        " [  3.  -15.  -15.  -15.    1. ]\n",
+                        " [  4.  -19.3 -19.3 -19.3   1. ]\n",
+                        " [  5.  -16.8 -16.8 -16.8   1. ]\n",
+                        " [  6.  -11.4 -11.4 -11.4   1. ]\n",
+                        " [  7.   -7.6  -7.6  -7.6   1. ]\n",
+                        " [  8.   -7.1  -7.1  -7.1   1. ]\n",
+                        " [  9.  -10.1 -10.1 -10.1   1. ]\n",
+                        " [ 10.   -9.5  -9.5  -9.5   1. ]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "data = np.genfromtxt('ascii_data_1.txt')\n",
                 "print(data)\n"
@@ -94,13 +119,30 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[  1.   -6.1  -6.1  -6.1   1. ]\n",
+                        " [  2.  -15.4 -15.4 -15.4   1. ]\n",
+                        " [  3.  -15.  -15.  -15.    1. ]\n",
+                        " [  4.  -19.3 -19.3 -19.3   1. ]\n",
+                        " [  5.  -16.8 -16.8 -16.8   1. ]\n",
+                        " [  6.  -11.4 -11.4 -11.4   1. ]\n",
+                        " [  7.   -7.6  -7.6  -7.6   1. ]\n",
+                        " [  8.   -7.1  -7.1  -7.1   1. ]\n",
+                        " [  9.  -10.1 -10.1 -10.1   1. ]\n",
+                        " [ 10.   -9.5  -9.5  -9.5   1. ]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "data = np.loadtxt('ascii_data_1.txt')\n",
                 "print(data)"
@@ -314,7 +356,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python",
             "name": "python3"
         },
@@ -328,7 +370,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.13.2"
+            "version": "3.12.3"
         }
     },
     "nbformat": 4,
