--- a/Week_06/06_ukoly.ipynb
+++ b/Week_06/06_ukoly.ipynb
@@ -15,10 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[[1 4 5]\n",
+      " [7 5 8]\n",
+      " [7 2 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "p = print\n",
+    "a = np.array(range(1,11))\n",
+    "print(a)\n",
+    "b = np.random.randint(1,10, (3,3))\n",
+    "p(b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "p(a[2])\n",
+    "p(a[3,])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  6,  8, 10])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1::2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,10 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10,  9,  8,  7,  6,  5,  4,  3,  2,  1])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 5, 8])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[1,:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 5, 9])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.diagonal()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +187,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   4,   5],\n",
+       "       [100,   5,   8],\n",
+       "       [  7,   2,   9]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[1,0] = 100\n",
+    "b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100,   8,   7,   9])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[b > 5]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +246,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 5, 5, 8, 7, 2])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (b < 9)\n",
+    "b[mask]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,10 +294,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 5 3 1]\n",
+      " [6 7 8 9 7]\n",
+      " [5 7 4 6 1]\n",
+      " [2 4 8 2 3]\n",
+      " [2 4 6 4 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,10,(5,5))\n",
+    "p(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,10 +324,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a[1,0:4]\n",
+    "p(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +350,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[666   7   8   9]\n",
+      "[[  1   1   5   3   1]\n",
+      " [666   7   8   9   7]\n",
+      " [  5   7   4   6   1]\n",
+      " [  2   4   8   2   3]\n",
+      " [  2   4   6   4   2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b[0] = 666\n",
+    "p(b)\n",
+    "p(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,10 +382,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[666   7   8   9   7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = a[1,:].copy()\n",
+    "p(c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,10 +408,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1   1   5   3   1]\n",
+      " [666   7   8   9   7]\n",
+      " [  5   7   4   6   1]\n",
+      " [  2   4   8   2   3]\n",
+      " [  2   4   6   4   2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c[0] = 20\n",
+    "p(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,10 +438,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140135264009360\n",
+      "140135264438480\n"
+     ]
+    }
+   ],
+   "source": [
+    "p(id(b))\n",
+    "p(id(c))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +465,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 7 4 2 2]\n",
+      "Help on _ArrayFunctionDispatcher in module numpy:\n",
+      "\n",
+      "diagonal(a, offset=0, axis1=0, axis2=1)\n",
+      "    Return specified diagonals.\n",
+      "\n",
+      "    If `a` is 2-D, returns the diagonal of `a` with the given offset,\n",
+      "    i.e., the collection of elements of the form ``a[i, i+offset]``.  If\n",
+      "    `a` has more than two dimensions, then the axes specified by `axis1`\n",
+      "    and `axis2` are used to determine the 2-D sub-array whose diagonal is\n",
+      "    returned.  The shape of the resulting array can be determined by\n",
+      "    removing `axis1` and `axis2` and appending an index to the right equal\n",
+      "    to the size of the resulting diagonals.\n",
+      "\n",
+      "    In versions of NumPy prior to 1.7, this function always returned a new,\n",
+      "    independent array containing a copy of the values in the diagonal.\n",
+      "\n",
+      "    In NumPy 1.7 and 1.8, it continues to return a copy of the diagonal,\n",
+      "    but depending on this fact is deprecated. Writing to the resulting\n",
+      "    array continues to work as it used to, but a FutureWarning is issued.\n",
+      "\n",
+      "    Starting in NumPy 1.9 it returns a read-only view on the original array.\n",
+      "    Attempting to write to the resulting array will produce an error.\n",
+      "\n",
+      "    In some future release, it will return a read/write view and writing to\n",
+      "    the returned array will alter your original array.  The returned array\n",
+      "    will have the same type as the input array.\n",
+      "\n",
+      "    If you don't write to the array returned by this function, then you can\n",
+      "    just ignore all of the above.\n",
+      "\n",
+      "    If you depend on the current behavior, then we suggest copying the\n",
+      "    returned array explicitly, i.e., use ``np.diagonal(a).copy()`` instead\n",
+      "    of just ``np.diagonal(a)``. This will work with both past and future\n",
+      "    versions of NumPy.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    a : array_like\n",
+      "        Array from which the diagonals are taken.\n",
+      "    offset : int, optional\n",
+      "        Offset of the diagonal from the main diagonal.  Can be positive or\n",
+      "        negative.  Defaults to main diagonal (0).\n",
+      "    axis1 : int, optional\n",
+      "        Axis to be used as the first axis of the 2-D sub-arrays from which\n",
+      "        the diagonals should be taken.  Defaults to first axis (0).\n",
+      "    axis2 : int, optional\n",
+      "        Axis to be used as the second axis of the 2-D sub-arrays from\n",
+      "        which the diagonals should be taken. Defaults to second axis (1).\n",
+      "\n",
+      "    Returns\n",
+      "    -------\n",
+      "    array_of_diagonals : ndarray\n",
+      "        If `a` is 2-D, then a 1-D array containing the diagonal and of the\n",
+      "        same type as `a` is returned unless `a` is a `matrix`, in which case\n",
+      "        a 1-D array rather than a (2-D) `matrix` is returned in order to\n",
+      "        maintain backward compatibility.\n",
+      "\n",
+      "        If ``a.ndim > 2``, then the dimensions specified by `axis1` and `axis2`\n",
+      "        are removed, and a new axis inserted at the end corresponding to the\n",
+      "        diagonal.\n",
+      "\n",
+      "    Raises\n",
+      "    ------\n",
+      "    ValueError\n",
+      "        If the dimension of `a` is less than 2.\n",
+      "\n",
+      "    See Also\n",
+      "    --------\n",
+      "    diag : MATLAB work-a-like for 1-D and 2-D arrays.\n",
+      "    diagflat : Create diagonal arrays.\n",
+      "    trace : Sum along diagonals.\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> a = np.arange(4).reshape(2,2)\n",
+      "    >>> a\n",
+      "    array([[0, 1],\n",
+      "           [2, 3]])\n",
+      "    >>> a.diagonal()\n",
+      "    array([0, 3])\n",
+      "    >>> a.diagonal(1)\n",
+      "    array([1])\n",
+      "\n",
+      "    A 3-D example:\n",
+      "\n",
+      "    >>> a = np.arange(8).reshape(2,2,2); a\n",
+      "    array([[[0, 1],\n",
+      "            [2, 3]],\n",
+      "           [[4, 5],\n",
+      "            [6, 7]]])\n",
+      "    >>> a.diagonal(0,  # Main diagonals of two arrays created by skipping\n",
+      "    ...            0,  # across the outer(left)-most axis last and\n",
+      "    ...            1)  # the \"middle\" (row) axis first.\n",
+      "    array([[0, 6],\n",
+      "           [1, 7]])\n",
+      "\n",
+      "    The sub-arrays whose main diagonals we just obtained; note that each\n",
+      "    corresponds to fixing the right-most (column) axis, and that the\n",
+      "    diagonals are \"packed\" in rows.\n",
+      "\n",
+      "    >>> a[:,:,0]  # main diagonal is [0 6]\n",
+      "    array([[0, 2],\n",
+      "           [4, 6]])\n",
+      "    >>> a[:,:,1]  # main diagonal is [1 7]\n",
+      "    array([[1, 3],\n",
+      "           [5, 7]])\n",
+      "\n",
+      "    The anti-diagonal can be obtained by reversing the order of elements\n",
+      "    using either `numpy.flipud` or `numpy.fliplr`.\n",
+      "\n",
+      "    >>> a = np.arange(9).reshape(3, 3)\n",
+      "    >>> a\n",
+      "    array([[0, 1, 2],\n",
+      "           [3, 4, 5],\n",
+      "           [6, 7, 8]])\n",
+      "    >>> np.fliplr(a).diagonal()  # Horizontal flip\n",
+      "    array([2, 4, 6])\n",
+      "    >>> np.flipud(a).diagonal()  # Vertical flip\n",
+      "    array([6, 4, 2])\n",
+      "\n",
+      "    Note that the order in which the diagonal is retrieved varies depending\n",
+      "    on the flip function.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = a.diagonal().copy()\n",
+    "p(d)\n",
+    "help(np.diagonal)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,10 +616,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22  7  4  2  2]\n",
+      "[[  1   1   5   3   1]\n",
+      " [666   7   8   9   7]\n",
+      " [  5   7   4   6   1]\n",
+      " [  2   4   8   2   3]\n",
+      " [  2   4   6   4   2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d[0] = 22\n",
+    "p(d)\n",
+    "p(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,10 +647,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140135264448656\n",
+      "[[  1 666   5   2   2]\n",
+      " [  1   7   7   4   4]\n",
+      " [  5   8   4   8   6]\n",
+      " [  3   9   6   2   4]\n",
+      " [  1   7   1   3   2]]\n",
+      "140135264448656\n"
+     ]
+    }
+   ],
+   "source": [
+    "p(id(a))\n",
+    "e = a.T\n",
+    "p(e)\n",
+    "p(id(e.base))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,10 +684,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 2]\n",
+      " [1 2 2]\n",
+      " [1 2 3]\n",
+      " [2 2 1]\n",
+      " [3 1 3]]\n",
+      "[[6 7]\n",
+      " [8 7]\n",
+      " [8 7]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[52, 49],\n",
+       "       [38, 35],\n",
+       "       [46, 42],\n",
+       "       [36, 35],\n",
+       "       [50, 49]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,4,(5,3))\n",
+    "b = np.random.randint(5,9,(3,2))\n",
+    "p(a)\n",
+    "p(b)\n",
+    "\n",
+    "a @ b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,10 +734,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7  6]\n",
+      " [ 4  2]\n",
+      " [ 5  6]\n",
+      " [ 2 10]\n",
+      " [ 3  9]\n",
+      " [ 4  2]\n",
+      " [ 7  8]\n",
+      " [ 2  5]\n",
+      " [ 9  7]\n",
+      " [ 5  3]]\n",
+      "[0.73687178 0.90978201 0.40377412 0.54706395 0.57554606 0.66012425\n",
+      " 0.45470621 1.20989741 0.35661834 0.7426819 ]\n",
+      "[0.98047388 0.08936086 1.42679683 0.39009184 1.49180804 0.21726198\n",
+      " 0.09015753 0.64735545 0.28131915 0.37829924]\n",
+      "[0.73687178 0.90978201 0.40377412 0.54706395 0.57554606 0.66012425\n",
+      " 0.45470621 1.20989741 0.35661834 0.7426819 ]\n",
+      "[0.98047388 0.08936086 1.42679683 0.39009184 1.49180804 0.21726198\n",
+      " 0.09015753 0.64735545 0.28131915 0.37829924]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "a = np.random.randint(0,11,(10,2))\n",
+    "p(a)\n",
+    "\n",
+    "import numpy as np\n",
+    "C = np.random.random((10,2))\n",
+    "X = np.copy(C[:, 0])\n",
+    "Y = np.copy(C[:,1])\n",
+    "R = np.sqrt(X**2+Y**2)\n",
+    "T = np.arctan2(Y,X)\n",
+    "print(R)\n",
+    "print(T)\n",
+    "\n",
+    "X,Y = C[:,0], C[:,1]\n",
+    "R = np.sqrt(X**2+Y**2)\n",
+    "T = np.arctan2(Y,X)\n",
+    "print(R)\n",
+    "print(T)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,10 +820,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32 17 15]\n",
+      " [24  9 12]\n",
+      " [32 11 18]]\n",
+      "[[32 17 15]\n",
+      " [24  9 12]\n",
+      " [32 11 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.randint(1,5,(3,3))\n",
+    "B = np.random.randint(1,5,(3,3))\n",
+    "\n",
+    "print((A @ B).T)\n",
+    "print(B.T @ A.T)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -467,10 +943,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "False\n",
+      "False\n",
+      "nan\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "p(0 * np.nan)\n",
+    "p(np.nan == np.nan)\n",
+    "p(np.inf > np.nan)\n",
+    "p(np.nan - np.nan)\n",
+    "p(np.nan in set([np.nan]))\n",
+    "p(0.3 == 3 * 0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,10 +1028,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13  3 11 10  2  7 11  5  9 11]\n",
+      "[ 2  3  5  7  9 10 11 11 11 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.randint(1,15,(10))\n",
+    "p(A)\n",
+    "p(np.sort(A))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -556,7 +1065,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -570,7 +1079,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
