--- a/Week_06/06a_indexovani_rezani.ipynb
+++ b/Week_06/06a_indexovani_rezani.ipynb
@@ -33,7 +33,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
@@ -55,15 +55,41 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[0.  0.5 1.  1.5 2.  2.5 3. ]\n"
+                    ]
+                }
+            ],
             "source": [
                 "vector = np.linspace(0, 3, 7)\n",
-                "print(vector)\n",
-                "print(vector[1])\n",
-                "print(vector[1:4])\n",
-                "print(vector[1:4:2])\n"
+                "print(vector)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 5,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "0.0\n",
+                        "[0.5 1.  1.5]\n",
+                        "[0.5 1.5]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "print(vector[0])    # 0.\n",
+                "print(vector[1:4])  # 0.5 1. 1.5\n",
+                "print(vector[1:4:2])# 0.5 1.5\n"
             ]
         },
         {
@@ -76,14 +102,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[1 2 3]\n",
+                        " [4 5 6]\n",
+                        " [7 8 9]]\n",
+                        "2\n",
+                        "[1 2 3]\n",
+                        "[2 5 8]\n"
+                    ]
+                }
+            ],
             "source": [
                 "matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
                 "print(matrix)\n",
-                "print(matrix[0, 1])\n",
-                "print(matrix[0, :])\n",
+                "print(matrix[0, 1]) # 2\n",
+                "print(matrix[0, :]) \n",
                 "print(matrix[:, 1])\n",
                 "\n"
             ]
@@ -98,15 +137,25 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[2 3]\n",
+                        " [5 6]\n",
+                        " [8 9]]\n"
+                    ]
+                }
+            ],
             "source": [
-                "print(matrix[0:2, 1:3])\n"
+                "print(matrix[0:3, 1:3])\n"
             ]
         },
         {
@@ -119,13 +168,24 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([4, 5, 6])"
+                        ]
+                    },
+                    "execution_count": 11,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "matrix[1]\n"
             ]
@@ -139,15 +199,26 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([7, 8, 9])"
+                        ]
+                    },
+                    "execution_count": 13,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
-                "matrix[1, :]\n"
+                "matrix[2, :]\n"
             ]
         },
         {
@@ -159,22 +230,46 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 14,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([2, 5, 8])"
+                        ]
+                    },
+                    "execution_count": 14,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "matrix[:, 1]\n"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 15,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "array([[1, 2, 3],\n",
+                            "       [4, 5, 6],\n",
+                            "       [7, 8, 9]])"
+                        ]
+                    },
+                    "execution_count": 15,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
             "source": [
                 "matrix[:]"
             ]
@@ -188,13 +283,23 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 16,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[-10   2   3]\n",
+                        " [  4   5   6]\n",
+                        " [  7   8   9]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "matrix[0, 0] = -10\n",
                 "print(matrix)\n"
@@ -212,13 +317,23 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 17,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[-10   2   3]\n",
+                        " [  0   0   0]\n",
+                        " [  7   8   9]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "matrix[1, :] = 0\n",
                 "print(matrix)\n"
@@ -226,9 +341,19 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 18,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[-10   2   1]\n",
+                        " [  0   0   2]\n",
+                        " [  7   8   3]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "matrix[:, 2] = np.array([1, 2, 3])\n",
                 "print(matrix)"
@@ -250,9 +375,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 19,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "9\n",
+                        "[7 8 9]\n",
+                        "[9 8 7 6 5 4 3 2 1]\n",
+                        "[5 4 3 2 1]\n"
+                    ]
+                }
+            ],
             "source": [
                 "vector = np.arange(1, 10)\n",
                 "print(vector[-1])\n",
@@ -272,13 +408,22 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 20,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[1 2 3 4 5 6 7 8 9]\n",
+                        "[6 3 2 9]\n"
+                    ]
+                }
+            ],
             "source": [
                 "vector = np.arange(1, 10)\n",
                 "vyber = np.array([5, 2, 1, 8])\n",
@@ -296,9 +441,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 21,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[1 2 3 4 5 6 7 8 9]\n",
+                        "[7 8 9 7 8 9]\n"
+                    ]
+                }
+            ],
             "source": [
                 "vyber = np.array([-3, -2, -1, 6, 7, 8])\n",
                 "print(vector)\n",
@@ -315,11 +469,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 25,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[1 2 3 4 5 6 7 8 9]\n",
+                        "[2 3 9]\n"
+                    ]
+                }
+            ],
             "source": [
-                "vyber = np.array([1, 2, 10])\n",
+                "vyber = np.array([1, 2, 8])\n",
                 "print(vector)\n",
                 "print(vector[vyber])"
             ]
@@ -334,13 +497,25 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 28,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[1 2 3]\n",
+                        " [4 5 6]\n",
+                        " [7 8 9]]\n",
+                        "---\n",
+                        "[2 6 7]\n"
+                    ]
+                }
+            ],
             "source": [
                 "matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
                 "vyber_x = np.array([0, 1, 2])\n",
@@ -362,9 +537,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 29,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "IndexError",
+                    "evalue": "shape mismatch: indexing arrays could not be broadcast together with shapes (3,) (2,) ",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+                        "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+                        "Cell \u001b[0;32mIn[29], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m vyber_x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m      2\u001b[0m vyber_y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[43mvyber_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvyber_y\u001b[49m\u001b[43m]\u001b[49m)\n",
+                        "\u001b[0;31mIndexError\u001b[0m: shape mismatch: indexing arrays could not be broadcast together with shapes (3,) (2,) "
+                    ]
+                }
+            ],
             "source": [
                 "vyber_x = np.array([0, 1, 2])\n",
                 "vyber_y = np.array([1, 0])\n",
@@ -386,13 +573,24 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 26,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
                 }
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[ True False  True]\n",
+                        " [False  True False]\n",
+                        " [ True False  True]]\n",
+                        "[1 3 5 7 9]\n"
+                    ]
+                }
+            ],
             "source": [
                 "matrix = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
                 "mask = np.array([[True, False, True], [False, True, False], [True, False, True]])\n",
@@ -402,9 +600,21 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 27,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[1 2 3]\n",
+                        " [7 8 9]]\n",
+                        "[[1 3]\n",
+                        " [4 6]\n",
+                        " [7 9]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "mask = np.array([True, False, True])\n",
                 "print(matrix[mask, :])\n",
@@ -414,7 +624,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python",
             "name": "python3"
         },
@@ -428,7 +638,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.13.2"
+            "version": "3.12.3"
         }
     },
     "nbformat": 4,
