--- a/Week_06/06b_view_a_copy.ipynb
+++ b/Week_06/06b_view_a_copy.ipynb
@@ -12,7 +12,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {
                 "jupyter": {
                     "outputs_hidden": false
@@ -34,12 +34,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "[[1 2 3]\n",
+                        " [4 5 6]\n",
+                        " [7 8 9]]\n",
+                        "[[1 2 3]]\n",
+                        "[[-1 -1 -1]\n",
+                        " [ 4  5  6]\n",
+                        " [ 7  8  9]]\n",
+                        "[[-1 -1 -1]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
-                "B = A[:1,1:]\n",
+                "B = A[:1,]\n",
                 "print(A)\n",
                 "print(B)\n",
                 "B[:,:] = -1\n",
@@ -62,14 +77,29 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "  C_CONTIGUOUS : True\n",
+                        "  F_CONTIGUOUS : False\n",
+                        "  OWNDATA : True\n",
+                        "  WRITEABLE : True\n",
+                        "  ALIGNED : True\n",
+                        "  WRITEBACKIFCOPY : False\n",
+                        "\n",
+                        "[[2 3]]\n"
+                    ]
+                }
+            ],
             "source": [
                 "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
                 "B = A[:1,1:]\n",
                 "print(A.flags)\n",
-                "print(B.flags)"
+                "print(B)"
             ]
         },
         {
@@ -200,7 +230,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "Python 3 (ipykernel)",
             "language": "python",
             "name": "python3"
         },
@@ -214,7 +244,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.13.2"
+            "version": "3.12.3"
         }
     },
     "nbformat": 4,
