--- a/Week_06/DU3.ipynb
+++ b/Week_06/DU3.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,23 +71,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[101. 100.  99.  98.  97.  96.  95.  94.  93.  92.  91.]\n",
+      " [102.  65.  64.  63.  62.  61.  60.  59.  58.  57.  90.]\n",
+      " [103.  66.  37.  36.  35.  34.  33.  32.  31.  56.  89.]\n",
+      " [104.  67.  38.  17.  16.  15.  14.  13.  30.  55.  88.]\n",
+      " [105.  68.  39.  18.   5.   4.   3.  12.  29.  54.  87.]\n",
+      " [106.  69.  40.  19.   6.   1.   2.  11.  28.  53.  86.]\n",
+      " [107.  70.  41.  20.   7.   8.   9.  10.  27.  52.  85.]\n",
+      " [108.  71.  42.  21.  22.  23.  24.  25.  26.  51.  84.]\n",
+      " [109.  72.  43.  44.  45.  46.  47.  48.  49.  50.  83.]\n",
+      " [110.  73.  74.  75.  76.  77.  78.  79.  80.  81.  82.]\n",
+      " [111. 112. 113. 114. 115. 116. 117. 118. 119. 120. 121.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "A = integer_spiral(7)\n",
+    "A = integer_spiral(11)\n",
     "print(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
+      " 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48\n",
+      " 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72\n",
+      " 73 74 75 76 77 78 79 80]\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "def integer_spiral_numpy(n):\n",
     "    #TODO naimplementujte viz zadání\n",
-    "    pass "
+    "    pass \n",
+    "\n",
+    "A = np.arange(1,9**2)\n",
+    "p = print\n",
+    "p(A)\n",
+    "\n",
+    "B = np.zeros([9,9])\n",
+    "p(B)"
    ]
   },
   {
@@ -170,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
